# Poke-API-training

./: .coverage  README.md  coverage.xml  main.py  poke_api_training.db  poke_info.py  poke_lookout.py  pyproject.toml
.github/workflows/: poke_api.yml
database/: database_generator.py
poke_api/: data_types.py  extract.py  load.py  transform.py
tests/: test_poke_api.py
