[tool.poetry]
name = "Poke_API"
version = "0.1.0"
description = ""
authors = ["MathXCruz <matheus.cruz1996@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
blue = "^0.8.0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
